---
project: PoRedoImage
diagram: erDiagram
variant: simplified
last_updated: 2026-07-11
---
%% DatabaseSchema_simplified.mmd — Simplified Table Storage entity map
%% Render with:
%%   npx @mermaid-js/mermaid-cli -i DatabaseSchema_simplified.mmd -o DatabaseSchema_simplified.svg

erDiagram
    USER_IMAGE ||--o{ AI_METADATA : "annotated by"
    USER_IMAGE }o--o| BULK_PROMPT : "may be from"
    USER_IMAGE }o--o| MEME_TEMPLATE : "may use"
    PRICING_PROVIDER ||--o{ PRICING_SNAPSHOT : "scoped by"

    USER_IMAGE {
        string PartitionKey "PK = UserId"
        string RowKey       "RK = Guid.NewGuid()"
        bytes  ImageData    "Blob URL ref"
        string Mode         "ImageRegeneration | MemeGeneration"
        datetime CreatedAt
    }

    AI_METADATA {
        string PartitionKey "PK = CorrelationId"
        string RowKey       "RK = step ('cv' | 'openai' | 'gemini')"
        long   DurationMs
        int    TokensUsed
    }

    BULK_PROMPT {
        string PartitionKey "PK = UserId"
        string RowKey       "RK = '{yyyymm}:{slug}'"
        string Title
        bool    IsFavorite
    }

    MEME_TEMPLATE {
        string PartitionKey "PK = 'templates'"
        string RowKey       "RK = slug"
        string TopText
        string BottomText
    }

    PRICING_PROVIDER {
        string PartitionKey "PK = 'providers'"
        string RowKey       "RK = provider key"
        bool    Enabled
    }

    PRICING_SNAPSHOT {
        string PartitionKey "PK = provider"
        string RowKey       "RK = '{yyyymmddHH}:{modelId}'"
        decimal PerImageUsd
        datetime CapturedAt
    }